carousel: fix dots position on mobile

--- a/src/templates/portfolio/portfolio.module.scss
+++ b/src/templates/portfolio/portfolio.module.scss
@@ -178,6 +178,7 @@
         }
         @include mediaQueries.maxWidthMobile {
           top: 228px;
+          position: absolute; //TODO fix this double position values
         }
       }
     }
